--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,6 @@
                 <li><a href="location.html">Location</a></li>
             </ul>
             <div class="nav-actions">
-                <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark mode"></button>
                 <a href="contact.html" class="cta-button">Get Started</a>
             </div>
         </div>
@@ -56,7 +55,7 @@
             <!-- Contact Form -->
             <div class="contact-form-container">
                 <div id="formMessage" class="form-message" style="display: none;"></div>
-                <form class="contact-form" id="contactForm" action="https://formspree.io/f/mbdloadb" method="POST">
+                <form class="contact-form" id="contactForm" action="https://formspree.io/f/mwvvkloz" method="POST">
                     <div class="form-group">
                         <label for="name">Full Name *</label>
                         <input type="text" id="name" name="name" required>
@@ -173,22 +172,6 @@
         });
         backToTopButton.addEventListener('click', () => {
             window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-
-        // Theme Toggle
-        const themeToggle = document.getElementById('themeToggle');
-        const body = document.body;
-        const currentTheme = localStorage.getItem('theme') || 'light';
-        if (currentTheme === 'dark') {
-            body.classList.add('dark-mode');
-        }
-        themeToggle.addEventListener('click', () => {
-            body.classList.toggle('dark-mode');
-            if (body.classList.contains('dark-mode')) {
-                localStorage.setItem('theme', 'dark');
-            } else {
-                localStorage.setItem('theme', 'light');
-            }
         });
 
         // Mobile Menu Toggle
