--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>">
+    <link rel="icon" type="image/png" href="favicon1.png">
 </head>
 <body>
+    <div class="animated-background"></div>
     <!-- Logo Banner -->
     <div class="logo-banner">
         <a href="index.html" class="banner-link"></a>
@@ -125,13 +126,19 @@
             <a href="contact.html" class="btn-primary">Call Now for Help</a>
             
             <div class="contact-info">
-                <p><strong>Call Center Email:</strong> <a href="mailto:admin@qualitycredit.co.za" style="color: #1a365d;">admin@qualitycredit.co.za</a></p>
-                <p><strong>Debt Review & Debt Review Removal:</strong> <a href="tel:+27620658364" style="color: #1a365d;">062 065 8364</a></p>
-                <p><strong>Debt Mediation:</strong> <a href="tel:+27620610528" style="color: #1a365d;">062 061 0528</a></p>
+                <p><strong>Call Center Email:</strong> <a href="mailto:admin@qualitycredit.co.za" style="color: var(--accent-color);">admin@qualitycredit.co.za</a></p>
+                <p><strong>Debt Review & Debt Review Removal:</strong> <a href="tel:+27620658364" style="color: var(--accent-color);">062 065 8364</a></p>
+                <p><strong>Debt Mediation:</strong> <a href="tel:+27620610528" style="color: var(--accent-color);">062 061 0528</a></p>
                 <p><strong>Operating Hours:</strong> Monday - Friday, 8:00 AM - 5:00 PM<br>Closed on weekends</p>
             </div>
         </div>
     </section>
+
+    <!-- Chat Button -->
+    <a href="contact.html#chat-with-us" class="chat-button" aria-label="Chat with us">
+        <span class="chat-icon">💬</span>
+        <span class="chat-text">Chat with us</span>
+    </a>
 
     <!-- Footer -->
     <footer>
@@ -156,18 +163,7 @@
         </div>
     </footer>
 
-    <!-- Back to Top Button -->
-    <button id="backToTop" class="back-to-top" aria-label="Back to top">↑</button>
     <script>
-        // Back to Top Button
-        const backToTopButton = document.getElementById('backToTop');
-        window.addEventListener('scroll', () => {
-            backToTopButton.style.display = window.pageYOffset > 300 ? 'flex' : 'none';
-        });
-        backToTopButton.addEventListener('click', () => {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-
         // Mobile Menu Toggle
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
         const navLinks = document.getElementById('navLinks');
